--- a/todo.txt
+++ b/todo.txt
@@ -44,9 +44,9 @@
 + Ошибка отправки
 
 2023-12-11
-* обновить фото с figma
-* оптимизировать фото
-	* добавить .webp и source к крупным фото
++ обновить фото с figma
++ оптимизировать фото
+	+ добавить .webp и source к крупным фото
 * удалить все console.log
 * сделать анимацию в слайдере
 * убрать минификация html, css
