--- a/todo.txt
+++ b/todo.txt
@@ -48,7 +48,12 @@
 + оптимизировать фото
 	+ добавить .webp и source к крупным фото
 + удалить все console.log
-* сделать анимацию в слайдере
-- убрать минификация html, css
++ сделать анимацию в слайдере
++ убрать минификация html, css
 + убрать blocks и parts
-* preloader absolute
++ preloader absolute
+
+2023-12-13
+* images
+	* уменьшить фото 1440, 1200, 1023, 768, 360
+	* добавить source
